--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>My First Webpage</title>
+    <title>Odin Recipe Project</title>
   </head>
 
   <body>
     <h1>Odin Recipes</h1>
+    <a href="odin-recipes/MyMothersMeatballs.html">Meatballs</a>
   </body>
 </html>
